# CSI_HAR_with_ESP32

./: .gitignore  0.txt  1.txt  2.txt  create_datasets.py  get_example_input.py  model.c  model.h  model_quant.tflite  model_to_header.py  tf_lite_converter.py  train.py  trn_set_y.npy  tst_example.txt  tst_set_y.npy
Datasets/Test/Fall/: csi_data_1686174023.txt  csi_data_1686174070.txt  csi_data_1691175817.txt  csi_data_1691175931.txt  csi_data_1691175997.txt  csi_data_1691176125.txt  csi_data_1691176318.txt  csi_data_1691176384.txt
Datasets/Test/Run/: csi_data_1687999471.txt  csi_data_1691012558.txt  csi_data_1691012614.txt  csi_data_1691012669.txt  csi_data_1691012732.txt
ESP32_Program/ESP_HAR/: CMakeLists.txt  partitions.csv
ESP32_Program/ESP_HAR/main/: CMakeLists.txt  main.c
ESP32_Program/ESP_HAR/main/HAR_model/: HAR_task.c  HAR_task.h  model.c  model.h  predictor.cc  predictor.h
ESP32_Program/ESP_HAR/main/common/: common.h  custom_queue.c  custom_queue.h
ESP32_Program/ESP_HAR/main/include/filters/: filters.h  lowpass.h
ESP32_Program/ESP_HAR/main/include/model/: model.h
ESP32_Program/ESP_HAR/main/include/tasks/: HAR_task.h  csi_task.h  predictor_task.h  processor_task.h  wifi_task.h
ESP32_Program/ESP_HAR/main/src/filters/: filters.c
ESP32_Program/ESP_HAR/main/src/model/: model.c
ESP32_Program/ESP_HAR/main/src/tasks/: HAR_task.c  csi_task.c  predictor_task.cc  processor_task.c  wifi_task.c
har_model/: fingerprint.pb  saved_model.pb
har_model/variables/: variables.data-00000-of-00001  variables.index
html/: create_datasets.html
(+319 files in other folders)
